# optimum-advisor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  release-plz.toml
.agents/skills/optimizing-llm-serving/: SKILL.md
.github/workflows/: ci.yml  release-plz.yml  release.yml
docs/superpowers/plans/: 2026-07-13-production-hardening.md
examples/: bench.conf  bench.toml  sglang-bench.conf  sglang-bench.toml  sweep.conf  sweep.toml
scripts/: install.sh  mcp-probe.py  setup-correctness-env.sh  setup-python-env.sh
src/: app.rs  cli.rs  config.rs  engine.rs  engines.rs  error.rs  hf_jobs.rs  leaderboard.rs  lib.rs  logs.rs  main.rs  mcp.rs  runner.rs  serve.rs  sweep.rs  terminal.rs  tools.rs
src/advisor/: hardware.rs  mod.rs  model_memory.rs
src/cli/: args.rs  config_file.rs  mod.rs
src/config/: file.rs  mod.rs  validate.rs
src/correctness/: mod.rs  suite.rs
src/domain/: candidate.rs  config.rs  engine.rs  mod.rs  run.rs  trial.rs
src/engines/: managed.rs  mod.rs  params.rs  serve.rs
src/inspection/: correctness.rs  hardware.rs  mod.rs  model_memory.rs
src/leaderboard/: auth.rs  client.rs
src/mcp/: mod.rs  protocol.rs  schema.rs  tools.rs
src/python/: capability_probes.py  inspect_sglang_args.py  inspect_vllm_args.py
src/results/: artifact.rs  metrics.rs  mod.rs  report.rs
src/runtime/: atomic.rs  cancel.rs  docker.rs  json.rs  mod.rs  params.rs  process.rs  runner.rs  sanitize.rs  server.rs
tests/: cli_smoke.rs  gpu_acceptance.rs  mcp_smoke.rs
tests/fixtures/: bench-v2.toml  fake_server.py  sweep-v2.toml
(+4 files in other folders)
