[package]
name = "optimum-advisor"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Experimental CLI for benchmarking and advising LLM serving configurations."
repository = "https://github.com/dwarez/optimum-advisor"
readme = "README.md"
# Do not add `publish = false`: release-plz's `release` command silently skips
# unpublishable packages, which breaks the automated GitHub release. Git-only
# mode in release-plz.toml already prevents any `cargo publish`.

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
http = "1"
nix = { version = "0.31.3", default-features = false, features = ["process", "signal"] }
schemars = "1.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11.0"
signal-hook = "0.4.4"
thiserror = "2.0.18"
toml = "1.1.2"
ureq = { version = "3.3.0", default-features = false, features = ["json", "rustls", "platform-verifier"] }
zeroize = { version = "1.9.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.27.0"
